SPelling cleanup on historic vs historical.

--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -247,7 +247,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-22999="left:18rem;" data-23000="opacity:0; top:58rem;" data-24000="opacity:1; top:52rem;">
       <div class="text-label">
-        <p>Historic Aquifer Levels</p>
+        <p>Historical Aquifer Levels</p>
       </div>
     </div>
   </div>
