--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -149,7 +149,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-13999="left:18rem;" data-14000="opacity:0; top:58rem;" data-15000="opacity:1; top:52rem;" data-16000="opacity:1; top:52rem;" data-17000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Historic Aquifer Outflow</p>
+        <p>Historical Aquifer Outflow</p>
       </div>
     </div>
   </div>
