--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -69,7 +69,7 @@
     </div>
     <div skrollr class="div-fixed z-450" data-1999="left:18rem;" data-2000="opacity:0; top:58rem;" data-3000="opacity:1; top:52rem;" data-4000="opacity:1; top:52rem;" data-5000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>Director Districts Graphic</p>
+        <p>Director Districts</p>
       </div>
     </div>
   </div>
@@ -78,22 +78,24 @@
   <!-- Wickley: WORDL -->
   <div id="section02">
     <div skrollr class="div-fixed z-400" data-4999="top:8rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
-      <div class="text-frame">
+      <!-- <div class="text-frame">
         <p alt="">IMAGE</p>
-      </div>
+      </div> -->
     </div>
-    <div skrollr class="div-fixed z-500" data-4999="top:16rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
+    <div skrollr class="div-fixed z-500" data-4999="top:7.5rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
       <!-- <div class="image-frame"> -->
-        <div style="width: 400px; height: 400px; padding-bottom: 30px;">
-          <script src="http://cdn.tagul.com/embed/qmmwob6ujte4"></script>
+        <!-- <div style="width: 400px; height: 400px; padding-bottom: 30px;"> -->
+          <!-- <script src="http://cdn.tagul.com/embed/qmmwob6ujte4"></script> -->
+          <!-- <script src="../scripts/embed/wordl-eaa.js"></script> -->
           <!-- Please don't remove attribution to Tagul.com -->
-          <div style="display: table; margin: 0 auto;"><a href="http://tagul.com/">Created with Tagul.com</a></div>
-        </div>
+          <!-- <div style="display: table; margin: 0 auto;"><a href="http://tagul.com/">Created with Tagul.com</a></div> -->
+        <!-- </div> -->
       <!-- </div> -->
+      <div id="cons-image-wordl" class="image-frame-wordl wordl"></div>
     </div>
     <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>WORDL</p>
+        <p>EAA WORDL</p>
       </div>
     </div>
   </div>
