--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -197,3 +197,7 @@ a:hover {
   transition: top 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
 }
 
+.wordl {
+  background-color: #eee;
+  /*background-size: contain;*/
+}
