--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -1,6 +1,21 @@
 @charset "utf-8";
+
 /* Best not to overwrite the users presets if at all possible. Can adjust size by percent in MQ. */ 
 /* Assumptions: 100% = 1 em ~= 16px ~= 14pt */
+
+/***************/
+/* EAA COLORS */
+/***************/
+/* 
+  Melon: #AADD6D; 
+  Lake: #71B2C9; 
+  Tan: #E6D395; 
+  Amber: #C6930A; 
+  Teal: #00B28C; 
+  Sky: #4298B5; 
+*/
+/***************/
+
 html {
   font-size: 100%; 
   min-width: 1280px;
@@ -56,7 +71,6 @@ a:hover {
 .apptitle {
   font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 2rem;
-  /* Green: #AADD6D; Blue: #71B2C9; Seagreen: #73E0E0; Skyblue: #9CCAEA; */
   /*color: #9CCAEA;*/
   /*background-color: #71B2C9;*/ 
 }
@@ -71,7 +85,7 @@ a:hover {
 .eaa-logo-contact {
   /*top: 27rem;*/
   /*left: 34rem;*/
-  top: 68%;
+  top: 76%;
   left: 50%;
   width: 12rem;
   padding: 1rem;
@@ -81,7 +95,7 @@ a:hover {
 .encompass-logo-contact {
   /*top: 28rem;*/
   /*left: 47rem;*/
-  top: 70%;
+  top: 78%;
   left: 67%;
   width: 13rem;
   padding: 0.5rem 1rem;
@@ -91,7 +105,7 @@ a:hover {
 .ut-logo-contact {
   /*top: 28rem;*/
   /*left: 61rem;*/
-  top: 70%;
+  top: 78%;
   left: 85%;
   width: 8rem;
   border: 2px solid rgba(0,0,0,0);
@@ -109,6 +123,9 @@ a:hover {
   margin-right: auto;
 }
 .information {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 78%;
   cursor: default;
   padding: 2rem 3rem 1rem 3rem;
   font-size: 0.9rem;
@@ -116,7 +133,7 @@ a:hover {
 .info-label {
   cursor: default;
   /*width: 50rem;*/
-  color: #AADD6D;
+  color: #71B2C9; /* Lake: #71B2C9; Melon: #AADD6D; Tan: #E6D395; */
   font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 1.5rem;
   /*text-align: right;*/
@@ -125,14 +142,16 @@ a:hover {
   color: #fff;
 }
 .info-video {
-  width: 352px;
-  height: 198px;
+  /*width: 352px;*/
+  /*height: 198px;*/
   padding: 1rem 0 0 1rem;
   border: 1px solid #333;
 }
 .info-quoted {
-  padding: 0 3rem 0 2rem;
-  color: #E6D395;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  padding: 0 2rem 0 2rem;
+  color: #AADD6D; /* Tan: #E6D395; Melon: #AADD6D; Lake: #71B2C9; */
 }
 .info-quotedby {
   float: right;
@@ -171,7 +190,7 @@ a:hover {
 
 .backdrop-info {
   width: 100%;
-  height: 70%;
+  height: 80%;
   background-color: #000;
 }
 
@@ -195,9 +214,4 @@ a:hover {
   -moz-transition: top 0.3s ease-out;  /* Firefox 4-15 */
   -o-transition: top 0.3s ease-out;  /* Opera 10.50–12.00 */
   transition: top 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
-}
-
-.wordl {
-  background-color: #eee;
-  /*background-size: contain;*/
 }
