--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -54,7 +54,6 @@
   </div>
 
   <!-- Section 1 -->
-  <!-- Wickley: Director Districts Graphic -->
   <div id="section01">
     <div skrollr class="div-fixed z-400" data-1999="top:8rem;" data-2000="opacity:0; left:-50rem;" data-3000="opacity:1; left:5rem;" data-4000="opacity:1; left:5rem;" data-5000="opacity:0; left:50rem;">
       <div class="text-frame">
@@ -75,27 +74,31 @@
   </div>
 
   <!-- Section 2 -->
-  <!-- Wickley: WORDL -->
   <div id="section02">
-    <div skrollr class="div-fixed z-400" data-4999="top:8rem;" data-5000="opacity:0; left:-50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:50rem;">
-      <!-- <div class="text-frame">
-        <p alt="">IMAGE</p>
-      </div> -->
-    </div>
-    <div skrollr class="div-fixed z-500" data-4999="top:7.5rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:5rem;" data-7000="opacity:1; left:5rem;" data-8000="opacity:0; left:-50rem;">
+    <div skrollr class="div-fixed z-500" data-4999="top:0rem;" data-5000="opacity:0; left:50rem;" data-6000="opacity:1; left:19rem;" data-7000="opacity:1; left:19rem;" data-8000="opacity:0; left:-50rem;">
       <!-- <div class="image-frame"> -->
-        <!-- <div style="width: 400px; height: 400px; padding-bottom: 30px;"> -->
-          <!-- <script src="http://cdn.tagul.com/embed/qmmwob6ujte4"></script> -->
-          <!-- <script src="../scripts/embed/wordl-eaa.js"></script> -->
-          <!-- Please don't remove attribution to Tagul.com -->
-          <!-- <div style="display: table; margin: 0 auto;"><a href="http://tagul.com/">Created with Tagul.com</a></div> -->
-        <!-- </div> -->
+        <!-- Please don't remove attribution to Tagul.com -->
+        <!-- <div style="width: 400px; height: 400px; padding-bottom: 30px;">
+          <script src="http://cdn.tagul.com/embed/qmmwob6ujte4"></script>
+          <div style="display: table; margin: 0 auto;"><a href="http://tagul.com/">Created with Tagul.com</a></div>
+        </div> -->
       <!-- </div> -->
-      <div id="cons-image-wordl" class="image-frame-wordl wordl"></div>
+
+      <!-- <div skrollr id="cons-image-wordl-000" class="image-frame-wordl" data-4999="transform:rotate(90deg);"></div> -->
+
+      <div skrollr id="cons-image-wordl-000" class="image-frame-wordl" ng-click="toggleModal()" data-4999="transform:rotate(90deg);"></div>
+
+      <modal-dialog id="modal-world" show='modalShown' width='150%' height='75%'>
+        <div class="modalContent">
+          <div class="tagulAttribution"><a href="http://tagul.com/">Created with Tagul.com</a></div>
+          <!-- <div id="wordlObject"></div> -->
+        </div>
+      </modal-dialog>
+
     </div>
     <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
       <div class="text-label">
-        <p>EAA WORDL</p>
+        <p>Functions of the EAA</p>
       </div>
     </div>
   </div>
@@ -112,7 +115,6 @@
         <source src="../videos/720p/HCPSanMarcos.webm" type="video/webm">
         <source src="../videos/720p/HCPSanMarcos.mp4" type="video/mp4">
       </video>
-    </div>
     </div>
     <div skrollr class="div-fixed z-450" data-7999="left:18rem;" data-8000="opacity:0; top:58rem;" data-9000="opacity:1; top:52rem;" data-10000="opacity:1; top:52rem;" data-11000="opacity:0; top:58rem;">
       <div class="text-label">
