--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -86,14 +86,16 @@
 
       <!-- <div skrollr id="cons-image-wordl-000" class="image-frame-wordl" data-4999="transform:rotate(90deg);"></div> -->
 
-      <div skrollr id="cons-image-wordl-000" class="image-frame-wordl" ng-click="toggleModal()" data-4999="transform:rotate(90deg);"></div>
+      <a class="nav-link-hcp" href="{{urlWordl}}" title="EAA Wordl" target="_blank" ng-click="linkModelFunc(urlWordl)">
+        <div skrollr id="cons-image-wordl-000" class="image-frame-wordl" data-4999="transform:rotate(90deg);"></div>
+      </a>
 
-      <modal-dialog id="modal-world" show='modalShown' width='150%' height='75%'>
+     <!--  <modal-dialog id="modal-world" show='modalShown' width='150%' height='75%'>
         <div class="modalContent">
           <div class="tagulAttribution"><a href="http://tagul.com/">Created with Tagul.com</a></div>
-          <!-- <div id="wordlObject"></div> -->
+          <div id="wordlObject"></div>
         </div>
-      </modal-dialog>
+      </modal-dialog> -->
 
     </div>
     <div skrollr class="div-fixed z-450" data-4999="left:18rem;" data-5000="opacity:0; top:58rem;" data-6000="opacity:1; top:52rem;" data-7000="opacity:1; top:52rem;" data-8000="opacity:0; top:58rem;">
