--- a/app/styles/interactives.css
+++ b/app/styles/interactives.css
@@ -62,15 +62,6 @@
 
 /**************************/
 /* Data Display Recharge */
-.year-display-recharge {
-  position: absolute;
-  margin-top: -6rem;
-  margin-left: 11rem;
-  padding: 0;
-  font-size: 18em;
-  font-weight: 700;
-  color: rgba(0,0,0,0.1);
-}
 .slide-banner-recharge {
   overflow: hidden;
   background-color: #425968; /*#71B2C9;*/ /*#4298B5;*/
@@ -111,23 +102,38 @@
   width: 5rem;
   height: auto;
 }
+
 .data-display-recharge {
   width: 5rem;
-  top: 7rem;
+  top: 6rem;
 }
 .legend-box-recharge {
   width: 10.5rem;
-  height: 7rem;
+  height: 9rem;
 }
+
 .legend-item-recharge {
-  height: 5rem;
+  width: 100%;
+  /*height: 5rem;*/
 }
 .data-item-recharge {
-  font-size: 1.2rem;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 1.6rem;
+  /*font-weight: 700;*/
 }
 .data-value-recharge {
   font-size: 3rem;
   font-weight: 700;
+}
+
+.year-display-recharge {
+  position: absolute;
+  margin-top: -6rem;
+  margin-left: 11rem;
+  padding: 0;
+  font-size: 18em;
+  font-weight: 700;
+  color: rgba(0,0,0,0.1);
 }
 
 /*******************^^^^/
@@ -198,9 +204,10 @@
 }
 
 .data-label-wells {
+  font-family: 'Open Sans Condensed', sans-serif;
   top: 4.5rem;
   color: #000;
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 700;
 }
 .legend-j17-label {
@@ -211,10 +218,11 @@
 }
 
 .data-value-wells {
+  font-family: 'Open Sans Condensed', sans-serif;
   top: 4.5rem;
   color: #000;
-  font-size: 1.1rem;
-  font-weight: 700;
+  font-size: 1.4rem;
+  /*font-weight: 700;*/
 }
 .legend-j17-value {
   left: 4.5rem;
@@ -224,9 +232,10 @@
 }
 
 .stage-label-wells {
+  font-family: 'Open Sans Condensed', sans-serif;
   top: 6.5rem;
   color: #000;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 700;
 }
 .stage-j17-label {
@@ -474,7 +483,7 @@
 .data-value-springs {
   font-family: 'Open Sans Condensed', sans-serif;
   color: #000;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .data-value-springs-0 {
