Additional cleanup on leaflet CSS.

--- a/app/styles/leaflet-encompass.css
+++ b/app/styles/leaflet-encompass.css
@@ -1,9 +1,18 @@
 /* Encompass Custom Leaflet Styles */
 
+/* For embedded maps */
+/*.leaflet-map {
+  margin-left: 0;
+  margin-right: 0;
+  width: 64rem;
+  height: 36rem;
+  border: 2px solid #ffffff;
+  color: #000;
+}*/
+
 .leaflet-control {
   font-family: 'Open Sans Condensed', sans-serif;
   font-size: 1rem;
-  /*font-weight: 300 !important;*/
   z-index: 5000;
   padding: 0.25rem 0.5rem;
 }
@@ -18,14 +27,16 @@
 .leaflet-control-layers-toggle {
   /*background-image: url(images/layers-flat-green.png);*/
   line-height:36px;
-  width: 9rem;
+  width: auto;
   background-position:0.25rem 50%; 
   text-decoration:none;
 }
 .leaflet-control-layers-toggle:after {
+  font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 1.2rem;
+  /*font-weight: 700;*/
   padding-left: 3rem;
-  color: #fff;
+  color: #ddd;
   content: 'Map Layers';
 }
 
@@ -38,45 +49,51 @@
 }
 
 .leaflet-control-layers-list:before {
+  font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 1.2rem;
-  font-weight: 700;
+  /*font-weight: 700;*/
   color: #AADD6D;
   padding: 1rem 1rem 1rem 2.5rem;
   content: "Base Maps";
 }
 
 .leaflet-control-layers-overlays:before {
+  font-family: 'Ubuntu Condensed', sans-serif;
   font-size: 1.2rem;
-  font-weight: 700;
+  /*font-weight: 700;*/
   color: #fb0;
   padding: 1rem 1rem 1rem 2.5rem;
   content: "Data Overlays";
 }
 
-/*label > input.leaflet-control-layers-selector > span {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-weight: 300 !important;
-  font-weight: normal;
-  color:#f00;
-}*/
 label {
   font-weight: 300;
 }
 
+.leaflet-control-attribution {
+  margin-bottom: 3rem;
+}
+
 .leaflet-popup {
   font-family: 'Open Sans Condensed', sans-serif;
-  vertical-align: middle;
+  vertical-align: middle;/
+  /*color: #fff;*/
 }
 .leaflet-popup-content {
   font-size: 1rem;
   text-align: center;
-  color: #fff;
+  /*color: #fff;*/
 }
 .leaflet-popup-content-wrapper {
   border-radius: 0;
   background-color: rgba(1,0,1,0.9);
-  border: 1px solid #ea2;
+  border: 1px solid #71B2C9; /*ea2*/
+  color: #fff;
 }
 .leaflet-popup-tip {
-  background-color: #ea2;
+  background-color: #71B2C9; /*ea2*/
+}
+
+.popup {
+  color: #fff;
 }
