--- a/app/styles/interactives_overlay.css
+++ b/app/styles/interactives_overlay.css
@@ -1,59 +1,42 @@
-/* MAP */
+@charset "utf-8";
 
-#map {
+#data-access-index {
+  top: 4.25%;
+  right: 2rem;
+}
+
+.backdrop {
   width: 100%;
   height: 100%;
-  top: 5%;  /* 5%; */
-  right: 0;
-  bottom: 0;
-  left: 0;
+  background-color: rgba(0,0,0,0.7);
 }
 
-#map-nav {
-  top: 6rem;
-  left: 0.5rem;
-  width: 5rem;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  background: rgba(255,255,255, 0.9);
-  line-height: 1.5rem;
-  border: 1px solid #000;
-  border-top-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  color: #555;
-}
-#map-nav > ul {
-  margin: 0 auto;
-}
-#map-nav > ul > li {
-  display: inline;
-  list-style: none;
+.backdrop-info {
+  width: 100%;
+  height: 80%;
+  background-color: #000;
 }
 
-.legend {
-  padding: 0.5rem 1rem;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  background: rgba(255,255,255, 0.9);
-  line-height: 1.5rem;
-  border-top-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-  color: #555;
-  width: 9rem;
+.offstage { left: -200%; }
+.offstage-top { top: -150%; }
+
+.open-panel { left:0 !important; }
+.open-panel-top-50 { top: 3rem !important; }
+
+.open { left:12% !important; }
+
+.transition { 
+  -webkit-transition: left 0.3s ease-out;  /* Chrome 1-25, Safari 3.2+ */
+  -moz-transition: left 0.3s ease-out;  /* Firefox 4-15 */
+  -o-transition: left 0.3s ease-out;  /* Opera 10.50–12.00 */
+  transition: left 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
 }
 
-.legend i {
-  color: #777;
-  width: 1rem;
-  height: 1rem;
-  float: left;
-  margin-right: 0.5rem;
-  opacity: 0.6;
-  border: 1px solid #000;
-}
-
-.legend > .info-label {
-  vertical-align: middle;
-  width: 10rem;
-  cursor: default;
+.transition-slide-down { 
+  -webkit-transition: top 0.3s ease-out;  /* Chrome 1-25, Safari 3.2+ */
+  -moz-transition: top 0.3s ease-out;  /* Firefox 4-15 */
+  -o-transition: top 0.3s ease-out;  /* Opera 10.50–12.00 */
+  transition: top 0.3s ease-out;  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
 }
 
 /* DATA */
