Edited color scales to account for inversion of intensity in color coded key on recharge interactive. Placed markers on themap for the 3 key locations. Embedded hooks to allow for displaying the interactive panels based on the marker links. Also edited the Texas geojson style to be just border outline. Note - the mouseover effect still effects the texas geojson so either that piece will need to be loaded seperarely so a unique handler can be applied, or unique mouseover style should be created for each geojson object loaded to overlay. Second option is more thorough and flexible for now.

--- a/app/views/geography.html
+++ b/app/views/geography.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="geography">
-    <leaflet-map id="map" class="div-fixed z-100"></leaflet-map>
+    <leaflet-map id="map" class="div-fixed z-100" display-recharge-panel="displayRechargePanel()" display-wells-panel="displayWellsPanel()" display-springs-panel="displaySpringsPanel()"></leaflet-map>
     <div id="data-access-index" class="div-fixed z-500">
       <button id="toggle-data-panel">Show Data</button>
     </div>
