--- a/app/views/geography.html
+++ b/app/views/geography.html
@@ -38,7 +38,7 @@
       </div>
     </div> -->
     <div id="data-panel-recharge" class="div-fixed z-300 backdrop-interactive backdrop-recharge offstage transition">
-      <div class="div-relative close-interactive"><a ng-click="closePanels()"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
+      <div class="div-relative close-interactive"><a ng-click="closePanel($event)"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
       <div class="z-200">
         <div id="recharge-slide" class="div-relative data-slide">
           <div id="interactive" class="interactive interactive-frame">
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div id="data-panel-wells" class="div-fixed z-300 backdrop-interactive backdrop-wells offstage transition">
-      <div class="div-relative close-interactive"><a ng-click="closePanels()"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
+      <div class="div-relative close-interactive"><a ng-click="closePanel($event)"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
       <div class="z-200">
         <div id="wells-slide" class="div-relative data-slide">
           <div id="interactive" class="interactive interactive-frame">
@@ -76,7 +76,7 @@
       </div>
     </div>
     <div id="data-panel-springs" class="div-fixed z-300 backdrop-interactive backdrop-springs offstage transition">
-      <div class="div-relative close-interactive"><a ng-click="closePanels()"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
+      <div class="div-relative close-interactive"><a ng-click="closePanel($event)"><span class="glyphicon glyphicon-remove-circle"></span></a></div>
       <div class="z-200">
         <div id="springs-slide" class="div-relative data-slide">
           <div id="interactive" class="interactive interactive-frame">
